@@ -287,8 +287,9 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2012-2020 Michal Josef Špaček
- BSD 2-Clause License
+© 2012-2020 Michal Josef Špaček
+
+BSD 2-Clause License
 
 =head1 VERSION
 
