@@ -115,8 +115,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2012-2020 Michal Josef Špaček
-     BSD 2-Clause License
+    © 2012-2020 Michal Josef Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.05
